--- a/pkg/maven/Dockerfile.maven_21-jdk-jammy
+++ b/pkg/maven/Dockerfile.maven_21-jdk-jammy
@@ -8,3 +8,14 @@ RUN apt update && \
   apt -y autoremove && \
   apt -y clean && \
   rm -rf /var/lib/apt/lists/*
+
+# Install Maven
+ARG MAVEN_VERSION=3.9.11
+
+RUN curl -fsSL https://dlcdn.apache.org/maven/maven-3/${MAVEN_VERSION}/binaries/apache-maven-${MAVEN_VERSION}-bin.tar.gz \
+    | tar -xz -C /opt \
+  && mv /opt/apache-maven-${MAVEN_VERSION} /opt/maven \
+  && ln -s /opt/maven/bin/mvn /usr/local/bin/mvn
+
+ENV MAVEN_HOME=/opt/maven \
+    MAVEN_CONFIG=/root/.m2
