--- a/.github/workflows/engine-ci.yml
+++ b/.github/workflows/engine-ci.yml
@@ -50,6 +50,7 @@ jobs:
         env:
           RUN_INTEGRATION_TESTS: "true"
           CONTAINIFYCI_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          CONTAINIFYCI_DOCKER_TOKEN: ${{ secrets.CONTAINIFYCI_DOCKER_TOKEN }}
         run: |
           # Move binary to expected location
           # mv ${{ matrix.binary }} containifyci-java-$(go env GOOS)-$(go env GOARCH)
