fix(servlet): update dependencies and build process
Switch servlet imports from `javax` to `jakarta` and update the
`pom.xml` to use the `jakarta.servlet-api` dependency.

Refactor the build process using `build.BuildGroups`, and
update Go module dependencies to their latest versions.

- Change servlet package imports to jakarta
- switch to jakarta.servlet-api dependency in pom.xml
- Refactor the main build method using BuildGroups
- Update go.mod dependencies to latest versions

--- a/testdata/hello-world-servlet/pom.xml
+++ b/testdata/hello-world-servlet/pom.xml
@@ -30,6 +30,13 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>jakarta.servlet</groupId>
+            <artifactId>jakarta.servlet-api</artifactId>
+            <version>5.0.0</version> <!-- or 6.x if your Tomcat supports it -->
+            <scope>provided</scope>
+        </dependency>
+
         <!-- JUnit for testing -->
         <dependency>
             <groupId>junit</groupId>
