chore(github): update CI perms for pull requests
- Add permission for pull requests in CI workflow

--- a/.github/workflows/engine-ci.yml
+++ b/.github/workflows/engine-ci.yml
@@ -32,6 +32,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write # for checkout
+      pull-requests: write # for commenting on pr
     steps:
       - name: Checkout code
         uses: actions/checkout@v5
