chore(deps): update to engine-ci 0.37.5

--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -38,3 +38,15 @@ updates:
         update-types:
           - "minor"
           - "patch"
+  - package-ecosystem: "gomod"
+    directory: "testdata/hello-world-servlet/.containifyci"
+    schedule:
+      interval: "weekly"
+      day: "sunday"
+    groups:
+      minor:
+        patterns:
+          - "*"
+        update-types:
+          - "minor"
+          - "patch"
